parcial front entrega

--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -8,7 +8,7 @@
 }
 
 .styledTable thead tr {
-    background-color: #000f98;
+    background-color: #000f98a4;
     color: #ffffff;
     text-align: left;
 }
